--- a/style.css
+++ b/style.css
@@ -15,16 +15,19 @@ h3 {
   margin: 0;
 }
 
-h1 {
-  font-size: 96px !important;
+h1.name {
+  font-size: 96px;
 }
 
-h2 {
-  font-size: 48px !important;
+h2.name {
+  font-size: 48px;
+}
+h2.mb3 {
+  font-size: 48px;
 }
 
 h3 {
-  font-size: 24px !important;
+  font-size: 24px;
   opacity: 0.7;
 }
 
@@ -102,4 +105,36 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+@media (max-width: 576px) {
+  h1.name {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2.name {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+  img.main {
+    display: none;
+  }
+  h2 {
+    text-align: center;
+    font-size: 32px;
+  }
+  .navgrid-links {
+    display: block;
+    text-align: center;
+    margin: 0px 20px;
+  }
+  .grid-link {
+    display: block;
+    text-align: center;
+    margin: 0px 20px;
+  }
 }
